5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1671_1101.log
== TEST (2019-04-24 14:29:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo:"))
t=input("tipo de consumo (R/I/C): ")
print("Entrada: ", c "kWh e tipo " t)
-- ERROR:
File "XXXX", line 6
    print("Entrada: ", c "kWh e tipo " t)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:29:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo:"))
t=input("tipo de consumo (R/I/C): ")
print("Entrada: ", c, "kWh e tipo ", t)
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:44:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
print("Valor total: R$", z)	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:45:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
print("Valor total: R$", z)	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:45:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
print("Valor total: R$", z)	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:46:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.175957
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:47:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kwh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:47:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kwh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.128611
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo  I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo  R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:47:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kwh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.191971
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo  I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  -56.0 kwh e tipo  I
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:47:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kwh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.117858
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1671/1101/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:47:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kwh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.117528
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo  I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo  R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:49:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
elif(y=="R" and x>500):
	z= x*(0.65)
elif(y=="C" and x<=1000):
	z= x*(0.55)
elif(y=="C" and x>1000):
	z= x*(0.60)
elif(y=="I" and x<=5000):
	z= x*(0.55)
elif(y=="I" and x>5000):
	z= x*(0.60)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:52:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.13492
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:52:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.158441
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:53:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.150325
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:53:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print(round(("Valor total: R$ ", z), 2)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- ERROR:
File "XXXX", line 15
    elif(y=="C" and x<=1000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print(round(("Valor total: R$ ", z), 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:56:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", z)
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", z)
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", z)
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.134449
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:57:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.167105
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:01:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:02:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", z)
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:02:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.203454
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:02:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Entrada: ", "X", "kWh e tipo ", "Y")
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:05:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Entrada: ", "X", "kWh e tipo ", "Y")
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.226084
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Entrada: ", x, "kWh e tipo ", y)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Entrada: ", "X", "kWh e tipo ", "Y")
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(y=="R" and x<=500):
	z= x*(0.44)
	print("Valor total: R$ ", round(z, 2))
elif(y=="R" and x>500):
	z= x*(0.65)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x<=1000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="C" and x>1000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x<=5000):
	z= x*(0.55)
	print("Valor total: R$ ", round(z, 2))
elif(y=="I" and x>5000):
	z= x*(0.60)
	print("Valor total: R$ ", round(z, 2))
else:
	print("Dados invalidos")
	
-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(x>0):
	if(y=="R" and x<=500): 
		z= x*(0.44)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="R" and x>500):
		z= x*(0.65)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x<=1000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x>1000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x<=5000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x>5000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.212879
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:10:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(x>0):
	if(y=="R" and x<=500): 
		z= x*(0.44)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="R" and x>500):
		z= x*(0.65)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x<=1000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x>1000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x<=5000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x>5000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")

-- OUTPUT:
Entrada:  -56.0 kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entrada: ", x, "kWh e tipo ", y)

if(x>0):
	if(y=="R" and x<=500): 
		z= x*(0.44)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="R" and x>500):
		z= x*(0.65)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x<=1000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x>1000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x<=5000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x>5000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.169453
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("consumo:"))
y=input("tipo de consumo (R/I/C): ")

print("Entradas: ", x, "kWh e tipo ", y)

if(x>0):
	if(y=="R" and x<=500): 
		z= x*(0.44)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="R" and x>500):
		z= x*(0.65)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x<=1000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="C" and x>1000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x<=5000):
		z= x*(0.55)
		print("Valor total: R$ ", round(z, 2))
	elif(y=="I" and x>5000):
		z= x*(0.60)
		print("Valor total: R$ ", round(z, 2))
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.190553
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
